# lerobot-rlinf

./: .gitignore  .gitmodules  ARCHITECTURE.zh.md  CLAUDE.md  PROGRESS.zh.md  README.md  README.zh.md  pyproject.toml
assets/so_arm100/: README.md
configs/: real_so101.example.yaml
docs/: notes.md  notes.zh.md  rl_lessons_learned.md  sft_diagnostics_findings.md  todo.md
docs/recap/: ARCHITECTURE.md  DATA_ADR.md  PROTOCOL.md  README.md  RECAP_SCHEMA.md  SAFETY.md
scripts/: _sft_tb_tail.py  audit_ckpt_keys.py  cam_snapshot.py  cam_sweep.py  cmp_actions.py  cmp_openpi_remapped_vs_lerobot.py  convert_lerobot_to_openpi.py  convert_urdf_to_usd.py  diff_model_outputs.py  eval_pi05_liftcube.py  eval_pi05_pickorange.py  eval_pi05_pickorange_lerobot.py  eval_pi05_pickorange_openpi.py  eval_pi05_sponge.py  extract_norm_stats.py  hello_isaacsim.py  import_so101_urdf.py  inspect_so101.py  lerobot_policy_adapter.py  replay_dataset_actions.py  sft_eval_loop_pickorange.sh  sft_pi05_pickorange.sh  sft_pi05_sponge.sh  sft_run_with_tb.sh  sft_smoke.sh  smoke_leisaac.py  smoke_lift_cube_leisaac.py  smoke_lift_so101.py
src/: eval.py  eval_report.py  eval_run.py  real.py  real_backend.py  real_orchestrator.py  sft_train.py  tb_tailer.py
src/diagnostics/: __init__.py  __main__.py  base.py  io.py  online_callback.py  registry.py  report.py  result.py  schema.py
src/lerobot_rlinf/: __init__.py
src/recap/: __init__.py  contracts.py  data_recorder.py  fake_robot.py  hook_server.py  lerobot_v3_exporter.py  (+1 more)
tests/: test_real_backend.py  test_recap_e2e.py  test_recap_state_machine.py
(+49 files in other folders)
